[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[lib]
name = "mainlib"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenv = "0.15"